force-app/main/default/objects/ssot__ConversationEntryTranscriptExcerpt__dlm/fields/ssot__rel_1702009487670_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009487670_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConversationEntryTranscriptExcerpt_C_rel</label>
    <referenceTo>ssot__ConversationEntry__dlm</referenceTo>
    <relationshipLabel>ConversationEntryTranscriptExcerpt_C_rel</relationshipLabel>
    <relationshipName>rel_1702009487670_end</relationshipName>
    <type>Lookup</type>
</CustomField>