force-app/main/default/objects/ssot__ConversationEntryTranscriptExcerpt__dlm/fields/ssot__rel_1716726631110_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726631110_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConversationEntryTranscriptExcerpt_T_rel</label>
    <referenceTo>ssot__VoiceCall__dlm</referenceTo>
    <relationshipLabel>ConversationEntryTranscriptExcerpt_T_rel</relationshipLabel>
    <relationshipName>rel_1716726631110_end</relationshipName>
    <type>Lookup</type>
</CustomField>